2009-07-07  Jan Djärv  <jan.h.d@swipnet.se>

	* xterm.c (handle_one_xevent): Only call x_check_fullscreen on the
	first MapNotify.

2009-07-07  Kenichi Handa  <handa@m17n.org>

	* character.h (unibyte_has_multibyte_table): Delete extern.
	(UNIBYTE_CHAR_HAS_MULTIBYTE_P): Delete it.

	* charset.c (Fset_charset_priority): Update charset_unibyte.
	(syms_of_charset): Initialize charset_unibyte.

	* character.c (unibyte_has_multibyte_table): Delete it.
	(multibyte_char_to_unibyte): Use CHAR_TO_BYTE8 instead of checking
	charset_unibyte.
	(multibyte_char_to_unibyte_safe): Likewise.
	(Funibyte_char_to_multibyte): Don't check charset_unibyte.

	* xdisp.c (get_next_display_element): Decode it->c by
	charset_unibyte.
	(x_produce_glyphs): Likewise.

	* .gdbinit (xcharset): Fix the treating $arg0.

2009-07-04  Eli Zaretskii  <eliz@gnu.org>

	Emulation of `getloadavg' on MS-Windows.
	* w32.c: Include float.h
	(g_b_init_get_native_system_info, g_b_init_get_system_times)
	(GetNativeSystemInfo_Proc, GetSystemTimes_Proc): Declare.
	(get_native_system_info, get_system_times): New functions.
	(buf_next, buf_prev, sample_system_load, getavg): New subroutines.
	(getloadavg): Rewrite using GetSystemTimes and GetNativeSystemInfo.
	(globals_of_w32): Initialize g_b_init_get_native_system_info,
	g_b_init_get_system_times, and num_of_processors.

2009-07-03  Jason Rumney  <jasonr@gnu.org>

	* w32term.c (w32_initialize): Use standard types.

2009-07-03  Eli Zaretskii  <eliz@gnu.org>

	* dired.c (Ffile_attributes): Decode user and group names by the
	locale's encoding.  (Bug#3443)

2009-07-03  Dan Nicolaescu  <dann@ics.uci.edu>

	* sysdep.c (sys_suspend): Remove USG_JOBCTRL #ifdef, unused.
	(mkdir): Remove MKDIR_PROTOTYPE #ifdef, unused.

	* callproc.c (child_setup): Use #else instead of a separate #ifdef.

	* term.c (init_tty): Remove spurious #ifdef.

	* m/mips.h: Mention this file is also used for netbsd.
	* m/pmax.h: Remove file.

2009-07-03  Jan Djärv  <jan.h.d@swipnet.se>
