@@ -1,3 +1,8 @@
+2009-07-07  Chong Yidong  <cyd@stupidchicken.com>
+
+	* fileio.c (Fsubstitute_in_file_name, Ffile_name_directory)
+	(Fexpand_file_name): Copy string data properly (Bug#3772).
+
 2009-07-07  Jan Djärv  <jan.h.d@swipnet.se>
 
 	* xterm.c (handle_one_xevent): Only call x_check_fullscreen on the
